fixed weird text wrapping

--- a/components/byu-footer/byu-footer.sass
+++ b/components/byu-footer/byu-footer.sass
@@ -63,9 +63,6 @@ $tabletBreak: 1024px // Put exact px to match Brightspot and so info doesn't wor
     align-items: center
     line-height: 17px
 
-  .privacy-notice
-    margin-top: .8em
-
   .university-footer-gte-1440
     display: none
 
@@ -78,35 +75,30 @@ $tabletBreak: 1024px // Put exact px to match Brightspot and so info doesn't wor
     box-sizing: border-box
     font-size: 10px
 
-  .byu-link
-    display: block
-    height: 2em
-    width: 6.5em
-    text-decoration: none
-    margin-bottom: 16px
-
   @media (min-width: $breakMd)
-    .university-footer-lt-1440
-      flex-direction: row
-
-    .byu-link
-      height: 2.2em
-      width: 8em
-      margin-bottom: 0
 
     .university-info
       flex: auto
 
   @media (min-width: $tabletBreak)
     .university-footer-lt-1440
+      display: grid
+      grid-template-columns: 1fr 2fr
+      grid-template-rows: auto
       padding: 30px 80px
       font-size: 14px
       max-width: 1240px
       margin: 0 auto
 
+    .university-logo
+      margin: 0
+      grid-area: 1/1/3/2
+
     .university-info
+      margin: 0
       flex-direction: row
-      margin-left: 210px
+      justify-content: center
+      grid-area: 1/2/2/3
 
       > :not(:first-of-type)
         margin-top: 0
@@ -117,6 +109,11 @@ $tabletBreak: 1024px // Put exact px to match Brightspot and so info doesn't wor
           content: '|'
           text-align: center
           width: 1em
+
+    .privacy-notice
+      margin-top: .8em
+      justify-content: center
+      grid-area: 2/2/3/3
 
   @media (min-width: $breakXl)
     .university-footer
